fixed cutoff on credits list

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -681,7 +681,7 @@ ul#pagemenu li a.active:active {
 }
 .credits-list #list-container {
 	height: 230px;
-	width: 494px;
+	width: 750px;
 }
 .credits-list ul {
 	list-style: url(../images/credits-bullet.png);
